Implement Gmail integration with email notification and reply features

--- a/example.env
+++ b/example.env
@@ -19,3 +19,5 @@ Google 規定必須先啟動兩步驟驗證，才能產生應用程式密碼。
 EMAIL_USER=example@gmail.com
 EMAIL_PASSWORD=程式密碼
 ==================================================================================================
+
+DISCORD_NOTIFY_CHANNEL_ID=YourToken 接收機器人訊息的頻道ID(EMAIL用) 之後可能看複雜度再看要不要多個
