Refactor_System_THSR

--- a/example.env
+++ b/example.env
@@ -1,6 +1,7 @@
 DISCORD_BOT_TOKEN=YourToken
 GPT_API=YourToken
-
+Login_Notify_Channel_ID=Login_Notify_Channel_ID
+Dashboard_Channel_ID=Dashboard_Channel_ID
 
 ==================================================================================================
 第一步：開啟兩步驟驗證 (必要前提)
